mime-actions: use format argument

The call to gtk_message_dialog_format_secondary_text() in
show_unhandled_type_error() is missing a format argument, which causes
build failures with -Werror=format-security.

This commit adds the missing argument.

https://bugzilla.gnome.org/show_bug.cgi?id=765918